# flink_project_demos

./: .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: build-and-push.yaml
automatic_migration/: index.html
c360/: index.html
c360/data_models/: index.html
c360/flink_project/: index.html
c360/spark_project/: index.html
c360_api/: .gitignore  Dockerfile  database.py  models.py  setup.py
c360_dashboard/: pyproject.toml
c360_dashboard/data/: c360_analytics.duckdb.wal
c360_dashboard/src/c360_dashboard/: dashboard.py  generate_mock_data.py
c360_mock_data/customer/: app_usage.csv  customers.csv  support_tickets.csv
c360_mock_data/logistics/: tracking_events.csv
c360_mock_data/products/: inventory.csv  product_suppliers.csv  products.csv  suppliers.csv
c360_mock_data/sales/: regional_sales.csv  transaction_items.csv
c360_spark_processing/: QUICKSTART.md  README.md  c360_consolidated_pipeline.sql  demo_queries.sql  run_c360_pipeline.sh  run_pipeline.sh  test_pipeline.sh
c360_spark_processing/intermediates/: int_customer_transactions.sql
c360_spark_processing/sources/: src_customers.sql  src_products.sql  src_transactions.sql
customer_360/c360_api/: Makefile  README.md  config.py  demo.sh  main.py  pyproject.toml  test_api.py
customer_360/c360_dashboard/: README.md
customer_360/c360_dashboard/data/: customer_analytics_c360.csv
customer_360/c360_flink_processing/: README.md
customer_360/c360_flink_processing/pipelines/: inventory.json
customer_360/c360_mock_data/customer/: loyalty_program.csv
customer_360/c360_mock_data/logistics/: shipments.csv  warehouse_locations.csv
customer_360/c360_mock_data/sales/: transactions.csv
customer_360/c360_spark_processing/: DATA_FLOW.md  README.md  run_c360_pipeline.sh
customer_360/c360_spark_processing/dimensions/: dim_customers.sql
customer_360/c360_spark_processing/facts/: fct_customer_360_profile.sql
customer_360/c360_spark_processing/sources/: src_customers.sql  src_loyalty_program.sql
customer_360/kafka_consumer/: .gitignore  IMPLEMENTATION_PLAN.md  README_SETUP.md  main.py  pyproject.toml  readme.md  validate_records.py
customer_360/kafka_consumer/src/kafka_validator/: __init__.py  cli.py  config.py  consumer.py  ddl_parser.py  formatters.py  models.py  resolver.py  schema_registry.py  validator.py
docs/: automatic_migration.md  c360_data_models.md  index.md  spark_project.md
docs/c360/: flink_project.md  index.md  spark_project.md
flink_data_products/pipelines/: inventory.json
flink_data_products/tests/: docker-compose.yml  pyproject.toml  run_tests.sh
search/: search_index.json
(+93 files in other folders)
