[project]
name = "c360-dashboard"
version = "0.1.0"
description = "Customer 360 Analytics Dashboard"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.32.0",
    "duckdb>=0.10.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/c360_dashboard"]

[tool.rye]
managed = true
dev-dependencies = [
    "black",
    "ruff",
    "pytest"
]